@@ -20,8 +20,7 @@
     <File name="./ChangeLog" subtype="Code" buildaction="Nothing" />
     <File name="./CTagsProjectServiceExtension.cs" subtype="Code" buildaction="Compile" />
     <File name="./Tag.cs" subtype="Code" buildaction="Compile" />
-    <File name="./CTagsCommandHandler.cs" subtype="Code" buildaction="Compile" />
-    <File name="./icons/complete" subtype="Code" buildaction="EmbedAsResource" />
+    <File name="./CTagsTextEditorExtension.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
@@ -32,6 +31,7 @@
     <ProjectReference type="Gac" localcopy="True" refto="MonoDevelop.Ide, Version=0.14.0.0, Culture=neutral" />
     <ProjectReference type="Gac" localcopy="True" refto="gtk-sharp, Version=2.10.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <ProjectReference type="Gac" localcopy="True" refto="gdk-sharp, Version=2.10.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+    <ProjectReference type="Gac" localcopy="True" refto="MonoDevelop.Projects.Gui, Version=0.14.0.0, Culture=neutral" />
   </References>
   <MonoDevelop.Autotools.MakefileInfo IntegrationEnabled="True" RelativeMakefileName="./Makefile.am">
     <BuildFilesVar Sync="True" Name="FILES" />
