@@ -8,17 +8,17 @@ REFS = \
 	-r:$(top_builddir)/build/bin/MonoDevelop.Core.dll \
 	-r:$(top_builddir)/build/AddIns/MonoDevelop.Ide.dll \
 	-r:$(top_builddir)/build/AddIns/MonoDevelop.Projects.dll \
+	-r:$(top_builddir)/build/AddIns/MonoDevelop.Projects.Gui.dll \
 	-r:$(top_builddir)/build/AddIns/MonoDevelop.Components.dll \
 	$(GTK_SHARP_LIBS)
 	
 FILES =  \
-	CTagsCommandHandler.cs \
 	CTagsProject.cs \
 	CTagsProjectServiceExtension.cs \
+	CTagsTextEditorExtension.cs \
 	Tag.cs
 
-RES = \
-	icons/complete
+RES =
 
 ADDIN = CTagsCompletion.addin.xml
 
